Fixes hero to not get cut off

--- a/src/sass/imports/_sections.scss
+++ b/src/sass/imports/_sections.scss
@@ -183,7 +183,7 @@
       margin: 0;
       position: absolute;
       bottom: 20px;
-      max-width: 500px;
+      max-width: 450px;
     }
   }
 }
